--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,29 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 /* add the body to be central and baclground 
 color anf the font size */
+
+body{
+    height: 100vh;
+    margin: 0;
+font-family: 'Courier New', Courier, monospace;
+background-color: rgba(#f7f7f7);
+}
+
+
+/* header */
+
+h2{
+    color: rgb(#fff);
+    background-color:#2ecc71 ;
+
+}
+
+
 
 /* make the board squere and give the color 
 and background color 
