--- a/css/main.css
+++ b/css/main.css
@@ -34,12 +34,20 @@ place-content: center;
 /* header */
 
 h2{
-    color: var(--clr-5);
-    background-color:var(--clr-2);
+    color: beige;
+    background-color: var(--clr-4);
     display: flex;
     place-content: center;
+    letter-spacing: 2vmin;
+    font-size: 5vmin;
+    border-color: #209085 transparent transparent;
+    border-style: solid;
+    border-radius: 10rem;
+
 
 }
+
+
 
 /* section of the rows and culomns */
 
@@ -47,13 +55,13 @@ h2{
     margin: 20px;
     background-color: var(--clr-1);
     border-radius: 0.5rem;
-    height: 85vh;
+    height: 80vh;
     width: 450px;
     aspect-ratio: 1 / 1.5;
     position: relative;
 
 }
-
+/* this is the background glow */
 #rows::before,
 #rowa::after{
     content: "";
@@ -77,6 +85,21 @@ h2{
 @keyframes rotation {
     0% { --gradient-angle:0deg; }
     100% { --gradient-angle: 360deg; }
+}
+
+button{
+    color: beige;
+    background-color: var(--clr-4);
+    display: flex;
+    align-content: center;
+    place-content: center;
+    align-items: center;
+    letter-spacing: 1.5vmin;
+    font-size: 5vmin;
+    border-color: #209085 transparent transparent;
+    border-style: solid;
+    border-radius: 5rem;
+    justify-content: center;
 }
 
 
