--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,30 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+ *{
+    padding:0 ;
+    margin: 0px;
+} 
 
-@property --gradient-angle {
+/* @property --gradient-angle {
     syntax: "<angle>";
     initial-value: 0deg;
     inherits: false;
-}
+} */
 
 /* colors */
-:root {
+/* :root {
   --clr-1: #052b2f;
   --clr-2: #0e4b50;
-  --clr-3: #073438;
-  --clr-4: #209085;
-  --clr-5: #acbda1;
-}
+  --clr-3: #380735;
+  --clr-4: rgb(32, 17, 110);
+  --clr-5: #bda1b9;
+   --clr-6: #714a79;
+} */
+/* --clr-4: #209085; */
+/* --clr-3: #073438; */
+/* --clr-5: #acbda1; */
+
+
+
+  
 
 
 
@@ -25,11 +32,10 @@
 color anf the font size */
 
 body{
-height: 100vh;
-font-family: 'Courier New', Courier, monospace;
-background-color: var(--clr-2);
-display: grid;
-place-content: center;
+height: 70vh; 
+font-weight: bold;
+font-family: Arial, Helvetica, sans-serif;
+background-color: black;
 }
 
 
@@ -38,43 +44,116 @@ place-content: center;
 h2{
     position: relative;
     color: beige;
-    background-color: var(--clr-4);
-    display: flex;
-    place-content: center;
+    text-align: center;
     letter-spacing: 2vmin;
-    font-size: 5vmin;
-    border-color: #209085 transparent transparent;
-    border-style: solid;
-    border-radius: 10rem;
-    overflow: hidden;
+    font-size: 38px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    
 
 
 }
 
-/* section of the rows and culomns */
- #rows{
-    margin: 20px;
-    height: 80vh;
-    width: 450px;
+#displayboard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+#keyboard-board{
     display: grid;
-    grid-template-columns: repeat(5, 15vmin);
-    grid-template-rows: repeat(6, 13vmin);
+    grid-template-columns: repeat(5, auto);
+    grid-gap: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.square{
+    border: 2px solid darkslategray;
+    min-width: 60px;
+    min-height: 60px;
+    font-size: 50px;
+    font-weight: bold;
+    color: beige;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#content-of-all{
+    height: 200px;
+}
+
+.the-rows{
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    margin: auto ;
+    touch-action: manipulation;
+}
+.the-rows button{
+    height: 59px;
+    padding: 0;
+    font-weight: bold;
+    font-family: inherit;
+    border: 0;
+    cursor: pointer;
+    background-color: gray;
+    flex-grow: 1;
+    text-transform: uppercase;
+    margin-right: 1px;
+    border-radius: 8px;
+    user-select: none;
+}
+.the-rows button.w-button{
+    flex-grow: 1.5;
+}
+
+
+
+ /* #rows{
+    height: 72vh;
+    width: 360x;
+    margin: auto;
+    /* display: grid; */
+    /* grid-template-columns: repeat(5, 13vmin);
+    grid-template-rows: repeat(6, 13vmin); */
+    /* display: flex;
     flex-wrap: wrap;
+    background-color: black;
 
     aspect-ratio: 1 / 1.5;
     position: relative;
 
-} 
+     /* */
 
-  #rows>div {
-    flex: 1;
-    padding: 15px;
+
+/* .box{
+    /* flex: 1; */
+    /* padding: 0;
     box-sizing: border-box;
-    border: 1px solid #ccc;
-  }
+    border: 2px solid beige;
+    width: 60px;
+    height: 60px;
+    margin: 2.5px; */
+    
+    /* text */
+    /* color:burlywood ;
+    font-size: 36px;
+    font-weight: bold;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+  }  */
+
+  
 /* this is the background glow */
-#rows::before,
-#rows::after{
+/* body::before,
+body::after{
     content: "";
     position: absolute;
     inset: -.5rem;
@@ -89,32 +168,38 @@ h2{
      border-radius: inherit;
      animation: rotation 20s linear infinite;
 }
-#rows::after{
+body::after{
     filter: blur(3-.5rem);
 
 }
 @keyframes rotation {
     0% { --gradient-angle:0deg; }
     100% { --gradient-angle: 360deg; }
-}
+} */
 
-button{
-    color: beige;
-    background-color: var(--clr-4);
+
+/* button{
+    color: black;
+    background-color: var(--clr-6);
     display: flex;
     align-content: center;
     place-content: center;
     align-items: center;
     letter-spacing: 1.5vmin;
     font-size: 5vmin;
-    border-color: #209085 transparent transparent;
-    border-style: solid;
-    border-radius: 5rem;
+    /* border-color: #209085 transparent transparent; */
+    /* border-radius: 5rem;
     justify-content: center
-}
+} */ 
 
 
+/* responsive styling for smaller screen */
 
+/* @media (max-width: 600px) {
+      body {
+        flex: 100%;
+      }
+    }  */
 
 /* make the board squere and give the color 
 and background color 
