--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,17 @@ justify-content: center;
 
 
 /* header */
-.header{
-    color: #15f4ee;
+h2{
+    color: #920dba;
     text-align: center;
     letter-spacing: 2vmin;
     font-size: 3vmax;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: fantasy;
     font-weight: bold;
+    color: #fff; 
+    border-radius: 8px;
+    font-family: cursive;
+    text-shadow: 8px 8px 8px rgb(20, 3, 37);
     
     
 
